--- a/index2.html
+++ b/index2.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+            ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            }
+    </style>
 </head>
 <body>
-    THIS SECRET WILL BLEND YOUR UNEVEN SKIN TONE IN 7 DAYS
+    <h4 style="text-align: center;">
+        <span style="font-size: 28px;">
+            <strong>
+                THIS SECRET WILL BLEND YOUR UNEVEN SKIN TONE IN 7 DAYS
+            </strong>
+        </span>
+    </h4>
 
-Your uneven skin tone will fade away in 7 days and
+    <p style="text-align: center;">
+        <span style="text-decoration: underline; font-size: 24px;">
+            Your uneven skin tone will fade away in 7 days and
+        </span>
+    </p>
 
 You will finally be able to show off your skin with confidence
 
@@ -62,10 +79,17 @@ The human skin reacts sensitively to the sun, hormonal changes, and aging.
 And this is why your skin is not looking like what you want.
 
 Your uneven skin could be due to
-
-📌 Exposure to the sun
-📌 Hormonal changes or
-📌 You are naturally aging 
+<ul>
+    <li>
+        📌 Exposure to the sun
+    </li>
+    <li>
+        📌 Hormonal changes or
+    </li>
+    <li>
+        📌 You are naturally aging 
+    </li>
+</ul>
 
 This is caused by an increase in melanin in the skin
 
@@ -129,10 +153,20 @@ this means you will use your glow soap every day without having to forget
 
 How to apply 
 
-📌 Rub on your skin and let it stay for 3 mins
-📌 Massage with a sponge on your skin
-📌 Then wash off with water
-📌 Dry your skin and apply your body cream 
+<ul>
+    <li>
+        📌 Rub on your skin and let it stay for 3 mins
+    </li>
+    <li>
+        📌 Massage with a sponge on your skin
+    </li>
+    <li>
+        📌 Then wash off with water
+    </li>
+    <li>
+        📌 Dry your skin and apply your body cream 
+    </li>
+</ul>
 
 Note: Use morning and night for a better result
 
