adjust list type

--- a/index1.html
+++ b/index1.html
@@ -118,12 +118,19 @@ Research shows that people with heart-related issues visit the hospital at least
 
 And this process is unfair to you because it;
 
+<ul>
+    <li>
+        Affect your productivity because you have to spend at least 1 hour in the hospital for each test
+    </li>
+    <li>
+        Kills your life savings because you spend too much monitoring your heart
+    </li>
+    <li>
+        Makes you worry about how long you have to live if your test is not done
+    </li>
+</ul>
 
-Affect your productivity because you have to spend at least 1 hour in the hospital for each test
 
-Kills your life savings because you spend too much monitoring your heart
-
-Makes you worry about how long you have to live if your test is not done
 
 
 However, you can make this a history 
@@ -156,22 +163,41 @@ Life made easy for you
 
 With 1byone portable ECG monitor, you can regularly monitor your heart condition anytime, anywhere even if you know nothing about medical terminology
 
-It is easy to read the result
+<ul>
+    <li>
+        It is easy to read the result
+    </li>
+    <li>
+        It gives accurate result
+    </li>
+    <li>
+        You can move it anywhere with you
+    </li>
+</ul>
 
-It gives accurate result
 
-You can move it anywhere with you
 
 
 With an ECG monitor, you can also discover
 
-✔️ The cause of chest fluttering
+<ul style="list-style-type: none;">
+    <li>
+        ✔️ The cause of chest fluttering
+    </li>
+    <li>
+        ✔️ The cause of chest pain
+    </li>
+    <li>
+        ✔️ Abnormally fast or slow heart rates
+    </li>
+    <li>
+        ✔️ Irregular heartbeat
+    </li>
+</ul>
 
-✔️ The cause of chest pain
 
-✔️ Abnormally fast or slow heart rates
 
-✔️ Irregular heartbeat
+
 
 
 Moreover, 
