--- a/index1.html
+++ b/index1.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <title>THIS 30 SECONDS HEART TEST WILL REDUCE YOUR REGULAR VISIT TO THE HOSPITAL</title>
 </head>
-<body>
-    <div>
+<body class="container">
+    <div style="max-width: 751px;" class="container mt-2 pt-2 shadow">
         <p style="text-align: center;
         color: rgb(51, 51, 51) !important;
 --tcb-applied-color: rgb(51, 51, 51) !important;
 background-color: rgb(221, 221, 24) !important;
 font-size: 18px !important;">
-            THIS 30 SECONDS HEART TEST WILL REDUCE YOUR REGULAR VISIT TO THE HOSPITAL
+    <strong>
+        THIS 30 SECONDS HEART TEST WILL REDUCE YOUR REGULAR VISIT TO THE HOSPITAL
+    </strong>
         </p>
 
         <p style="
@@ -25,7 +28,8 @@ font-family: Tahoma, Geneva, sans-serif !important;
 font-size: 30px !important;
 color: rgb(135, 49, 49) !important;">
 
-            Treat as urgent if you have a heart attack, heart palpitation, chest pain, high blood pressure, and other heart-related issues.
+            Treat as urgent if you have a heart attack, heart palpitation, chest pain, high blood pressure, 
+            and other heart-related issues.
         </strong> 
         </p>
 
@@ -64,53 +68,82 @@ See what a doctor has to say
 
 Imagine waking up in the morning with peace of mind knowing that your heart condition is in the perfect state without having to visit the hospital.
 
+<div style="
+box-sizing: border-box;
+padding: 30px;
+margin-top: 20px;
+margin-bottom: 20px;
+">
+    <div style="
+    background-color: rgba(67, 145, 213, 0) !important;">
+    <p>
+        I am Lydia Brain and I am a health practitioner at the Lagos state teaching hospital. 
+    </p>
 
-I am Lydia Brain and I am a health practitioner at the Lagos state teaching hospital. 
+    <p>
+        I have worked in the cardiac care unit for over 5 years, where I deal with hundreds of heart patients daily.
+    </p>
 
+    <p>
+        Visiting the hospital every time can be tirely 
+    </p>
 
-I have worked in the cardiac care unit for over 5 years, where I deal with hundreds of heart patients daily.
+    <p>
+        And can even cause depression
+    </p>
 
+    <p>
+        What I am about to show you will change your life forever
+    </p>
 
-Visiting the hospital every time can be tirely 
+    <p>
+        Amaka is one of my patients at the cardiac care unit and for years she has had to live with the fear of dying
+    </p>
 
+    <p>
+        Several times she cried on my shoulder and all I could do was part her on the back
+    </p>
 
-And can even cause depression
+    <p>
+        One day she angrily said to me, 
+    </p>
 
+    <p>
+        "What if I die before I could have my heart test?"
+    </p>
 
-What I am about to show you will change your life forever
+    <p>
+        What if I can't afford to regularly pay my hospital bills?
+    </p>
 
+    <p>
+        Why do I have to always visit the hospital?
+    </p>
 
-Amaka is one of my patients at the cardiac care unit and for years she has had to live with the fear of dying
+    <p>
+        I hate it!"
+    </p>
 
+    <p>
+        The whole CCU unit was in chaos that day    
+    </p>
 
-Several times she cried on my shoulder and all I could do was part her on the back
+    <p>
+        And it took a lot to calm Amaka calm
+    </p>
 
+    <p>
+        It was that day a colleague introduced Amaka to a lifesaver that could help her monitor her heart 
+        condition without visiting the hospital every time
+    </p>
 
-One day she angrily said to me, 
+    <p>
+        Amaka literally went from being overly sad to living with peace of 
+        mind and saving more money for her other needs.
+    </p>
 
-
-"What if I die before I could have my heart test?"
-
-
-What if I can't afford to regularly pay my hospital bills?
-
-
-Why do I have to always visit the hospital?
-
-
-I hate it!"
-
-
-The whole CCU unit was in chaos that day 
-
-
-And it took a lot to calm Amaka calm
-
-
-It was that day a colleague introduced Amaka to a lifesaver that could help her monitor her heart condition without visiting the hospital every time
-
-
-Amaka literally went from being overly sad to living with peace of mind and saving more money for her other needs.
+    </div>
+</div>
 
 
 Research shows that people with heart-related issues visit the hospital at least once a month for heart tests with an ECG monitor machine
@@ -140,15 +173,14 @@ You can easily monitor your heart condition, live in peace, and save more money 
 
 
 
-
+<img src="" alt="">
 In her words, "I don't have to go to the doctor every time I feel that my heart is acting up."
 
 
-
+<img src="" alt="">
 He said: Fast and easy to use 
 
-
-
+<img src="" alt="">
 She said: It is accurate
 
 
@@ -229,39 +261,55 @@ At the end of the test, you would get a result of any symptoms acquired
 
 
 
+<p style="text-align: center;">
+    <strong>
+        Pro Tip:
+    </strong>
+</p>
 
-Pro Tip:
-1byone portable ECG monitor should not be used when your hands are wet else, you won't get an accurate result
+<p>
+    1byone portable ECG monitor should not be used when your hands are wet else, you won't get an accurate result
+</p>
 
+<p>
+    Also, it is advisable to always recharge your 1byone portable ECG monitor before use
+</p>
 
-Also, it is advisable to always recharge your 1byone portable ECG monitor before use
+<p>
+    Imagine having more money to save because you no longer need to always pay hospital bills
+</p>
 
+<p>
+    A proper hospital ECG test costs between #15,000 to #25,000
+</p>
 
-Imagine having more money to save because you no longer need to always pay hospital bills
+<p>
+    While 1byone portable ECG monitor is just #30,000 and you can use it for more than 2 years
+</p>
 
+<p>
+    Now, do the calculation
+</p>
 
-A proper hospital ECG test costs between #15,000 to #25,000
+<p>
+    If you always have to run to the hospital to test your heart that is #15,000 × 12 months = #180,000
+</p>
 
+<p>
+    Having your 1byone portable monitor at your fingertip will reduce your monthly visit to the hospital to at least once in 3 month
+</p>
 
-While 1byone portable ECG monitor is just #30,000 and you can use it for more than 2 years
+<p>
+    This means you only have to visit the hospital 4 times a year
+</p>
 
+<p>
+    Another calculation, #15,000 × 4 = #60,000
+</p>
 
-Now, do the calculation
-
-
-If you always have to run to the hospital to test your heart that is #15,000 × 12 months = #180,000
-
-
-Having your 1byone portable monitor at your fingertip will reduce your monthly visit to the hospital to at least once in 3 month
-
-
-This means you only have to visit the hospital 4 times a year
-
-
-Another calculation, #15,000 × 4 = #60,000
-
-
-This means you will be saving #120,000 for a year
+<p>
+    This means you will be saving #120,000 for a year
+</p>
 
 
 That's a crazy investment
@@ -275,8 +323,9 @@ Guarantee: You can return it if it malfunctions within a year
 
 We are always overbooked so if I were you I will claim my 1byone portable  ECG monitor now!
 
-
-Click to own your ECG monitor now!
+<button>
+    Click to own your ECG monitor now!
+</button>
 
 
 
