--- a/index1.html
+++ b/index1.html
@@ -173,15 +173,21 @@ You can easily monitor your heart condition, live in peace, and save more money 
 
 
 
-<img src="" alt="">
-In her words, "I don't have to go to the doctor every time I feel that my heart is acting up."
+<img src="./folder1/img2.png" alt="" class="justify-content-center">
+<p>
+    In her words, "I don't have to go to the doctor every time I feel that my heart is acting up."
+</p>
 
 
-<img src="" alt="">
-He said: Fast and easy to use 
+<img src="./folder1/img3.png" alt="">
+<p>
+    He said: Fast and easy to use 
+</p>
 
-<img src="" alt="">
-She said: It is accurate
+<img src="./folder1/img4.png" alt="">
+<p>
+    She said: It is accurate
+</p>
 
 
 An ECG monitor is what the doctor uses to check your heart condition and you can also have one for yourself
