--- a/index1.html
+++ b/index1.html
@@ -174,18 +174,18 @@ You can easily monitor your heart condition, live in peace, and save more money 
 
 
 <img src="./folder1/img2.png" alt="" class="mx-auto d-block">
-<p>
+<p class="text-center">
     In her words, "I don't have to go to the doctor every time I feel that my heart is acting up."
 </p>
 
 
 <img src="./folder1/img3.png" alt="" class="mx-auto d-block">
-<p>
+<p class="text-center">
     He said: Fast and easy to use 
 </p>
 
 <img src="./folder1/img4.png" alt="" class="mx-auto d-block">
-<p>
+<p class="text-center">
     She said: It is accurate
 </p>
 
