--- a/index2.html
+++ b/index2.html
@@ -42,11 +42,11 @@ Plus, you don't have to go through any laser pain or lose your original skin col
 
 It takes just 3 minutes to apply on your skin before bath
 
-
+<img src="./folder2/img1.png" alt="" class="mx-auto d-block">
 She had uneven skin tone and had her breakthrough with us
 
 
-
+<img src="./folder2/img2.png" alt="" class="mx-auto d-block">
 From rough skin to everyone talking about her skin
 
 
@@ -93,9 +93,9 @@ Your uneven skin could be due to
 
 This is caused by an increase in melanin in the skin
 
+<img src="./folder2/img3.png" alt="" class="mx-auto d-block">
 
-
-
+<img src="./folder2/img4.png" alt="" class="mx-auto d-block">
 
 
 
@@ -107,18 +107,19 @@ If you want to enjoy an even skin tone you have to intentionally control how you
 
 Hundreds of people have used Charry Organic glowing soap to control their skin tone
 
+<img src="./folder2/img5.png" alt="" class="mx-auto d-block">
 And they have a huge result
 
 
 She told me: Are you sure this would work for me? 
 Today the rest is history for her
 
-
+<img src="./folder2/img6.png" alt="" class="mx-auto d-block">
 Her boyfriend wanted the best skin for his babe. He contacted us and she is still on the journey with us today 
 
 
 
-
+<img src="./folder2/img7.png" alt="" class="mx-auto d-block">
 She wanted to get rid of her two-colored skin and she got that. Still on the journey with us 
 
 
@@ -129,12 +130,12 @@ This even skin tone secret was carefully formulated with carrot powder, oatmeal,
 
 See what scientists have to say about the formulation
 
+<img src="./folder2/img8.png" alt="" class="mx-auto d-block">
+
+<img src="./folder2/img9.png" alt="" class="mx-auto d-block">
 
 
-
-
-
-
+<img src="./folder2/img10.png" alt="" class="mx-auto d-block">
 
 
 These are proven formula that works best to give you an even skin tone with visible changes in 7 days
