--- a/index1.html
+++ b/index1.html
@@ -51,22 +51,29 @@ text-align: center;">
 background-color: transparent;">
 
 Even if you are not a health practitioner
-
+<br>
 
 Even if you don't know any medical terminology
-
+<br>
 
 You can regularly check your heart condition in 30 seconds without visiting the hospital every time 
-
+<br>
 
 Plus, you can easily get your test done in less than 30 seconds anytime, anywhere
+<br>
+<p>
+    <strong>
+        See what a doctor has to say 
+    </strong>
+</p>
 
+<br>
+<img src="./folder1/img1.png" alt="">
 
-See what a doctor has to say 
-
-
-
-Imagine waking up in the morning with peace of mind knowing that your heart condition is in the perfect state without having to visit the hospital.
+<p>
+    Imagine waking up in the morning with peace of mind knowing that your heart 
+    condition is in the perfect state without having to visit the hospital.
+</p>
 
 <div style="
 box-sizing: border-box;
