--- a/index1.html
+++ b/index1.html
@@ -196,17 +196,27 @@ You can easily monitor your heart condition, live in peace, and save more money 
     She said: It is accurate
 </p>
 
+<p>
+    <strong>
+        An ECG monitor is what the doctor uses to check your heart condition and you can also have one for yourself
+    </strong>
+</p>
 
-An ECG monitor is what the doctor uses to check your heart condition and you can also have one for yourself
+<p>
+    <strong>
+        Life made easy for you
+    </strong>
+</p>
+
+<img src="./folder1/img5.png" alt="" class="mx-auto d-block">
 
 
-Life made easy for you
-
-
-
-
-
-With 1byone portable ECG monitor, you can regularly monitor your heart condition anytime, anywhere even if you know nothing about medical terminology
+<p>
+    <strong>
+        With 1byone portable ECG monitor, you can regularly monitor your heart condition anytime, 
+        anywhere even if you know nothing about medical terminology
+    </strong>
+</p>
 
 <ul>
     <li>
@@ -222,8 +232,11 @@ With 1byone portable ECG monitor, you can regularly monitor your heart condition
 
 
 
-
-With an ECG monitor, you can also discover
+<p>
+    <strong>
+        With an ECG monitor, you can also discover
+    </strong>
+</p>
 
 <ul style="list-style-type: none;">
     <li>
@@ -241,108 +254,314 @@ With an ECG monitor, you can also discover
 </ul>
 
 
+<p style="font-size: 20px;">
+    Moreover, 
+</p>
+
+<p style="font-size: 20px;">
+    Unlike other home use ECG monitor
+</p>
+
+<p style="font-size: 20px;">
+    You don't need to use it with any external device like the smartphone app
+</p>
+
+<p style="font-size: 20px;">
+    However,
+</p>
+
+<p style="font-size: 20px;">
+    If you want your results saved for doctor reference you can save them for free on your PC, phone, and even on print.
+</p>
+
+<p style="font-size: 20px;">
+<strong>
+    How to use it?
+</strong>
+</p>
+
+<ol>
+    <li>
+        Long press the blue button for 4 seconds to turn on the ECG monitor
+    </li>
+    <li>
+        Fix your hand tightly on the fingertip
+    </li>
+    <li>
+        Hold tightly as it reads your heart rate in 10 seconds
+    </li>
+    <li>
+        At the end of the test, you would get a result of any symptoms acquired
+    </li>
+</ol>
+
+<img src="./folder1/img6.png" alt="" class="mx-auto d-block">
 
 
 
 
-Moreover, 
 
 
-Unlike other home use ECG monitor
-
-
-You don't need to use it with any external device like the smartphone app
-
-
-However,
-
-
-If you want your results saved for doctor reference you can save them for free on your PC, phone, and even on print.
-
-How to use it?
-
-Long press the blue button for 4 seconds to turn on the ECG monitor
-
-Fix your hand tightly on the fingertip
-
-Hold tightly as it reads your heart rate in 10 seconds
-
-At the end of the test, you would get a result of any symptoms acquired
-
-
-
-
-
-
-<p style="text-align: center;">
+<p style="font-size: 20px;">
     <strong>
         Pro Tip:
     </strong>
 </p>
 
-<p>
+<p style="font-size: 20px;">
     1byone portable ECG monitor should not be used when your hands are wet else, you won't get an accurate result
 </p>
 
-<p>
+<p style="font-size: 20px;">
     Also, it is advisable to always recharge your 1byone portable ECG monitor before use
 </p>
 
-<p>
+<p style="font-size: 20px;">
     Imagine having more money to save because you no longer need to always pay hospital bills
 </p>
 
-<p>
+<p style="font-size: 20px;">
     A proper hospital ECG test costs between #15,000 to #25,000
 </p>
 
-<p>
+<p style="font-size: 20px;">
     While 1byone portable ECG monitor is just #30,000 and you can use it for more than 2 years
 </p>
 
-<p>
-    Now, do the calculation
+<p style="font-size: 20px;">
+    <strong>
+        Now, do the calculation
+    </strong>
 </p>
 
-<p>
+<p style="font-size: 20px;">
     If you always have to run to the hospital to test your heart that is #15,000 × 12 months = #180,000
 </p>
 
-<p>
+<p style="font-size: 20px;">
     Having your 1byone portable monitor at your fingertip will reduce your monthly visit to the hospital to at least once in 3 month
 </p>
 
-<p>
+<p style="font-size: 20px;">
     This means you only have to visit the hospital 4 times a year
 </p>
 
-<p>
+<p style="font-size: 20px;">
     Another calculation, #15,000 × 4 = #60,000
 </p>
 
-<p>
+<p style="font-size: 20px;">
     This means you will be saving #120,000 for a year
 </p>
 
+<p style="font-size: 20px;">
+    That's a crazy investment
+</p>
 
-That's a crazy investment
+<p style="font-size: 20px;">
+    Save an extra #120,000 for #30,000 today or continue to spend your life savings
+</p>
 
+<p style="font-size: 20px;">
+    Guarantee: You can return it if it malfunctions within a year
+</p>
 
-Save an extra #120,000 for #30,000 today or continue to spend your life savings
+<p style="font-size: 20px;">
+    We are always overbooked so if I were you I will claim my 1byone portable  ECG monitor now!
+</p>
 
+<style>
+    .btn {
+        text-decoration: none !important;
+        color: #fff;
+    }
+    .tcb-button-link {
+        min-height: 54.7619px;
+        font-size: 1.33333em;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        background-color: rgb(216, 11, 7) !important;
+    }
+    a.tcb-button-link {
+    background-color: #1abc9c;
+    padding: 12px 15px;
+    font-size: 18px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline-flex;
+    align-items: center;
+    -webkit-align-items: center;
+    overflow: hidden;
+    width: 100%;
+    text-align: center;
+    line-height: 1.2em;
+}
+    .tcb-button-link:hover {
+        background-color: rgb(4, 153, 7) !important;
+        color: #fff;
+    }
+</style>
 
-Guarantee: You can return it if it malfunctions within a year
+<div style="max-width: 50%;margin-top: 20px;
+margin-bottom: 20px;display: table !important;
+margin-left: auto;
+margin-right: auto;">
+    <a href="#" class="btn tcb-button-link">
+        <strong>
+            Click to own your ECG monitor now!
+        </strong>
+    </a>
+</div>
 
-
-We are always overbooked so if I were you I will claim my 1byone portable  ECG monitor now!
-
-<button>
-    Click to own your ECG monitor now!
-</button>
-
-
-
-
+<div class="wpforms-container wpforms-container-full" id="wpforms-44">
+    <form id="wpforms-form-44" 
+    class="wpforms-validate wpforms-form" 
+    data-formid="44" 
+    method="post" 
+    enctype="multipart/form-data" 
+    action="/ulcerhb/fM8OWz7fyvO1nXcQaAolJEALw_wcB" 
+    data-token="0bde5a465bc64d0fbd22b09ba68eee25" 
+    novalidate="novalidate">
+    <div class="wpforms-field-container">
+        <div id="wpforms-44-field_2-container" 
+            class="wpforms-field wpforms-field-text" 
+            data-field-id="2">
+            <label class="wpforms-field-label" for="wpforms-44-field_2">
+                Full Name 
+                <span class="wpforms-required-label">*</span>
+            </label>
+            <input type="text" id="wpforms-44-field_2" 
+            class="wpforms-field-medium wpforms-field-required" 
+            name="wpforms[fields][2]" required="">
+        </div>
+        <div id="wpforms-44-field_4-container" class="wpforms-field wpforms-field-number" data-field-id="4">
+            <label class="wpforms-field-label" for="wpforms-44-field_4">
+                Phone Number <span class="wpforms-required-label">*</span>
+            </label>
+            <input type="number" pattern="\d*" id="wpforms-44-field_4" 
+            class="wpforms-field-medium wpforms-field-required" name="wpforms[fields][4]" required="">
+            <div class="wpforms-field-description">Please, crosscheck the number to make sure it's correct</div>
+        </div>
+        <div id="wpforms-44-field_5-container" 
+            class="wpforms-field wpforms-field-number" data-field-id="5">
+            <label class="wpforms-field-label" for="wpforms-44-field_5">
+                Whatsapp Phone number (For Order Update) <span class="wpforms-required-label">*</span>
+            </label>
+            <input type="number" pattern="\d*" id="wpforms-44-field_5" 
+                class="wpforms-field-medium wpforms-field-required" 
+                name="wpforms[fields][5]" required="">
+        </div>
+        <div id="wpforms-44-field_10-container" 
+            class="wpforms-field wpforms-field-email" 
+            data-field-id="10">
+            <label class="wpforms-field-label" for="wpforms-44-field_10">Email</label>
+            <input type="email" id="wpforms-44-field_10" 
+                class="wpforms-field-medium" name="wpforms[fields][10]">
+                <div class="wpforms-field-description">
+                    Enter your best email address. so we follow up with your treatment.
+                </div>
+        </div>
+        <div id="wpforms-44-field_6-container" 
+            class="wpforms-field wpforms-field-text" data-field-id="6">
+            <label class="wpforms-field-label" for="wpforms-44-field_6">
+                Full Delivery Address 
+                <span class="wpforms-required-label">*</span>
+            </label>
+            <input type="text" id="wpforms-44-field_6" 
+                class="wpforms-field-medium wpforms-field-required" 
+                name="wpforms[fields][6]" required="">
+        </div>
+        <div id="wpforms-44-field_7-container" class="wpforms-field wpforms-field-text" data-field-id="7">
+            <label class="wpforms-field-label" for="wpforms-44-field_7">
+                State <span class="wpforms-required-label">*</span>
+            </label>
+            <input type="text" id="wpforms-44-field_7" 
+            class="wpforms-field-medium wpforms-field-required" 
+            name="wpforms[fields][7]" required="">
+        </div>
+        <div id="wpforms-44-field_8-container" class="wpforms-field wpforms-field-text" data-field-id="8">
+            <label class="wpforms-field-label" for="wpforms-44-field_8">
+                City <span class="wpforms-required-label">*</span>
+            </label>
+            <input type="text" id="wpforms-44-field_8" 
+                class="wpforms-field-medium wpforms-field-required" 
+                name="wpforms[fields][8]" required="">
+        </div>
+        <div id="wpforms-44-field_9-container" 
+            class="wpforms-field wpforms-field-radio" data-field-id="9">
+            <label class="wpforms-field-label" for="wpforms-44-field_9">
+                PLEASE SELECT THE NUMBER OF BOTTLES TO BUY BELOW 
+                <span class="wpforms-required-label">*</span>
+            </label>
+            <ul id="wpforms-44-field_9" class="wpforms-field-required">
+                <li class="choice-1 depth-1">
+                    <input type="radio" id="wpforms-44-field_9_1" 
+                        name="wpforms[fields][9]" value="BUY 1 Bottle For N18,000" required="">
+                        <label class="wpforms-field-label-inline" for="wpforms-44-field_9_1">
+                            BUY 1 Bottle For N18,000
+                        </label>
+                </li>
+                <li class="choice-2 depth-1">
+                    <input type="radio" id="wpforms-44-field_9_2" 
+                    name="wpforms[fields][9]" 
+                    value="Buy 2 Bottles For N24,000" required="">
+                    <label class="wpforms-field-label-inline" for="wpforms-44-field_9_2">
+                        Buy 2 Bottles For N24,000
+                    </label>
+                </li>
+                <li class="choice-3 depth-1">
+                    <input type="radio" id="wpforms-44-field_9_3" 
+                    name="wpforms[fields][9]" 
+                    value="Buy 3 Bottles For N31,500" required="">
+                    <label class="wpforms-field-label-inline" for="wpforms-44-field_9_3">
+                        Buy 3 Bottles For N31,500
+                    </label>
+                </li>
+                <li class="choice-4 depth-1">
+                    <input type="radio" id="wpforms-44-field_9_4" 
+                    name="wpforms[fields][9]" 
+                    value="Buy 4 Bottles For N38,000" required="">
+                    <label class="wpforms-field-label-inline" 
+                    for="wpforms-44-field_9_4">
+                        Buy 4 Bottles For N38,000
+                    </label>
+                </li>
+                <li class="choice-5 depth-1">
+                    <input type="radio" id="wpforms-44-field_9_5" 
+                    name="wpforms[fields][9]" 
+                    value="Buy 6 Bottles For N49,500" required="">
+                    <label class="wpforms-field-label-inline" 
+                    for="wpforms-44-field_9_5">
+                    Buy 6 Bottles For N49,500</label>
+                </li>
+            </ul>
+            <div class="wpforms-field-description">
+                Be reminded that HERBSVIO ULCER PERMANENT CURE is for 
+                only those who want to permanently cure their stomach ulcer forever. 
+                Please, don't order if you're not ready.
+            </div>
+        </div>
+        </div>
+        <div class="wpforms-field wpforms-field-hp">
+            <label for="wpforms-44-field-hp" class="wpforms-field-label">Website</label>
+            <input type="text" name="wpforms[hp]" 
+                id="wpforms-44-field-hp" 
+                class="wpforms-field-medium">
+        </div>
+        <div class="wpforms-submit-container">
+            <input type="hidden" name="wpforms[id]" value="44">
+            <input type="hidden" name="wpforms[author]" value="1">
+            <input type="hidden" name="wpforms[post_id]" value="112">
+            <button type="submit" name="wpforms[submit]" 
+                id="wpforms-submit-44" class="wpforms-submit" 
+                data-alt-text="Sending..." 
+                data-submit-text="Click Here To Submit Your Order " 
+                aria-live="assertive" value="wpforms-submit">
+                Click Here To Submit Your Order 
+            </button>
+        </div>
+        </form>
+        </div>
 
     </div>
 </body>
